--- a/index.html
+++ b/index.html
@@ -40,10 +40,22 @@
   <script type="module" src="./src/player-card.js"></script>
   <script>
     
+    document.querySelector('button[data-toggle-btn]').addEventListener('click', (e) => {
+  const details = document.querySelector('player-card').shadowRoot.querySelector('details')
+  console.log(details);
+  if (details.getAttribute('open')) {
+    details.removeAttribute('open');
+  }
+  else {
+    details.setAttribute('open','open');    
+  }
+});
+
+
 //Details Button 
 document.querySelector('.btnDup').addEventListener('click', function(e) {
-  const copy = document.querySelector('.borders').cloneNode(true);
- document.body.appendChild(copy);
+  const copy = document.querySelector('player-card').cloneNode();
+ document.querySelector('#app').appendChild(copy);
 });
 // Duplicate 
 document.querySelector('#del').addEventListener('click', function(e) {
@@ -73,16 +85,6 @@ document.querySelector('.btnBack').addEventListener("click", (e) => {
    document.querySelector('.card').style.backgroundColor = color; 
 });
 
-document.querySelector('button[data-toggle-btn]').addEventListener('click', (e) => {
-  const details = document.querySelector('player-card').shadowRoot.querySelector('details')
-  console.log(details);
-  if (details.getAttribute('open')) {
-    details.removeAttribute('open');
-  }
-  else {
-    details.setAttribute('open','open');    
-  }
-});
 //Background Color 
   </script>
 </body>
