--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <player-card>
   <ul>
-  Star Football Runningback for the Penn State Nittany Lions!<br>Big Ten's Freshman of the Year in 2022
+  <li>Star Football Runningback for the Penn State Nittany Lions!<br>Big Ten's Freshman of the Year in 2022</li>
   </ul>
   </player-card>
 </div>
