--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ document.querySelector('#del').addEventListener('click', function(e) {
 //Delete 
 
 document.querySelector('.btnHead').addEventListener('click', function(e) {
-  let title = prompt("You dare change Singletons Name?!");
-  if (title) {
-    document.querySelector('.borders h2').innerText = title;
+  let name = prompt("You dare change Singletons Name?!");
+  if (name) {
+    document.querySelector('.borders h2').innerText = name;
   }
 });
 //Header
