--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@ document.querySelector('.btnHead').addEventListener('click', function(e) {
 
 document.querySelector('.btnBack').addEventListener("click", (e) => { 
    color = ("Blue");
-   document.querySelector('.card').style.backgroundColor = color; 
+   document.querySelector('player-card').style.backgroundColor = color; 
 });
-
 //Background Color 
   </script>
 </body>
